Fixed Page Overflow-x, minor css updates and UI Fixes

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -440,8 +440,8 @@
 .wedding-party-image {
     /* Display & Box Model */
     border: 2px solid black;
-    height: 180px; 
-    width: 180px;
+    height: 220px; 
+    width: 220px;
 
     /* Positioning */
     position: absolute;
@@ -454,17 +454,17 @@
     height: 80px; 
     width: 80px;
     margin: 0 auto;
-    transition: border 0.5s ease, box-shadow 0.5s ease;
+    transition: border 0.25s ease, box-shadow 0.25s ease;
 }
 
 .guy .wedding-party-token:hover {
-    border: 4px solid #b7cdb8;
-    box-shadow: 3px 5px rgba(0, 0, 0, 0.55);
+    border: 2px solid #b7cdb8;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .girl .wedding-party-token:hover {
-    border: 4px solid #d2dbec;
-    box-shadow: 3px 5px rgba(0, 0, 0, 0.55);
+    border: 2px solid #d2dbec;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .current-guy {
@@ -486,7 +486,7 @@
 .guy-postcard {
     /* for reference background-color: #88A48B; */
     color: white;
-    background-image: linear-gradient( rgba(136, 164, 139, 0.4), rgba(136, 164, 139, 0.4)), url("../images/post_card_bg.jpg");
+    background-image: linear-gradient( rgba(145, 162, 146, 0.75), rgba(145, 162, 146, 0.75)), url("../images/post_card_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -494,7 +494,7 @@
 .girl-postcard {
     /* for reference background-color: #7C918C; */
     color: white;
-    background-image: linear-gradient( rgba(124, 145, 140, 0.4), rgba(124, 145, 140, 0.4)), url("../images/post_card_bg.jpg");
+    background-image: linear-gradient( rgba(129, 135, 145, 0.75), rgba(129, 135, 145, 0.75)), url("../images/post_card_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -559,7 +559,7 @@
 
      /* Display & Box Model */
      background-color: #000;
-     background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/registry_background.jpeg");
+     background-image: linear-gradient( rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), url("../images/registry_background.jpeg");
      background-size: cover;
      background-repeat: no-repeat;
      /*opacity: 0.75;*/
@@ -581,7 +581,10 @@
     width: 22%;
     margin: 0 auto;
     border: 10px solid #C62C58;
-    box-shadow: 5px 8px rgba(0, 0, 0, 0.55);
+    box-shadow: 5px 5px 12px 0px rgba(0, 0, 0, 0.5);
+
+}
+
  }
 
  .registryOptionHeader {
@@ -641,7 +644,8 @@
  }
 
  .engagementPhoto {
-    /*width: 100%;*/
+    max-height: 300px;
+    width: 100%;
     cursor: pointer;
  }
 
